Change Header TItle to ensure better contrast

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -12,7 +12,7 @@ body {
 
 .header-title {
   padding: 1rem;
-  color: #96A667;
+  color: #495A19;
   text-align: center;
   font-size: 6rem;
 }
